converted Expr to sealed interface